--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -15,36 +15,12 @@ $orangeDark: #d35400;
 //$boxShadowMain: x
 //$boxShadowHover: x
 
-@keyframes lavaColors {
-  0% { color: #f2f217 }
-  25% { color: #ff6600 }
-  50% { color: #ff2500 }
-  75% { color: #ea5c0f }
-  100% { color: #f2f217 }
-}
-
 @keyframes lightColors {
   0% { color: #bef1f9 }
   25% { color: #ffffff }
   50% { color: #d8d4e5 }
   75% { color: #f0d4b1 }
   100% { color: #cbecda }
-}
-
-@keyframes igColors {
-  0% { color: #f2aeff }
-  25% { color: #f2aecf }
-  50% { color: #f2ae3f }
-  75% { color: #f2ae6f }
-  100% { color: #f2ae9f }
-}
-
-@keyframes lightBlueColors {
-  0% { color: #44eebb }
-  25% { color: #44eedd }
-  50% { color: #44bbff }
-  75% { color: #44ddff }
-  100% { color: #44eeff }
 }
 
 @keyframes moveWave {
@@ -257,20 +233,19 @@ ul:active, a:active {
   color: $lightMain;
 }
 
-.github-ion:hover {
-  animation: lavaColors 3s linear infinite;
+.social-icons a {
+  transition:  0.6s ease-out;
 }
 
-.codepen-ion:hover {
-  animation: lightColors 3s linear infinite;
+.social-icons a:hover {
+  transform: rotateZ(360deg);
 }
 
-.ig-ion:hover {
-  animation: igColors 3s linear infinite;
-}
-
+.github-ion:hover,
+.codepen-ion:hover,
+.ig-ion:hover,
 .linkedin-ion:hover {
-  animation: lightBlueColors 3s linear infinite;
+  animation: lightColors 3s linear infinite;
 }
 
 .main-btn {
@@ -366,7 +341,8 @@ ul:active, a:active {
   transition: box-shadow 0.6s;
 }
 
-//being thoughtful for disabled users, amended focus styling
+//being thoughtful for disabled users,
+//amended focus styling to visually show which element they are one
 .skills-buttons button:focus,
 .skills-buttons button:active {
   outline: none;
